# resonance-parrot

./: .gitignore  Cargo.toml  README.md
kb-getch-sys/: Cargo.toml  build.rs
kb-getch-sys/c_lib/: lib_kb_getch.c
kb-getch-sys/src/: lib.rs
resonance/: Cargo.toml  LICENSE
resonance-parrot/: Cargo.toml
resonance-parrot/bindings/: Cargo.toml  build.rs
resonance-parrot/src/: bottons.rs  error.rs  keyhit_input.rs  main.rs  terminal_diplay.rs  timeline.rs  windows_util.rs
resonance/src/: error.rs  lib.rs
wavfile/: Cargo.toml
wavfile/src/: error.rs  lib.rs
