[package]
name = "bindings"
version = "0.1.0"
authors = ["Yoshiyuki Koyama <58644862+yoshiyuki-koyama@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.10.0"

[build-dependencies]
windows = "0.10.0"